--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,14 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "@fortawesome/angular-fontawesome": "^0.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "angular-oauth2-oidc": "^10.0.3",
+    "cookieconsent": "^3.1.1",
+    "ngx-cookieconsent": "^2.2.3",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "typescript": "~4.0.2",
     "zone.js": "~0.10.2"
